// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the StretchyView component should render as a background 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "transform": Array [
              Object {
                "translateY": 0,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "overflow": "hidden",
              "width": "100%",
            }
          }
        >
          <View
            animate={null}
            customAnimate={null}
            onReady={false}
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#A5A5A5",
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={
                Array [
                  Object {
                    "cache": "force-cache",
                    "uri": "https://picsum.photos/600/600",
                  },
                ]
              }
              style={
                Object {
                  "backgroundColor": "#A5A5A5",
                  "opacity": 0,
                  "resizeMode": "cover",
                  "width": "100%",
                }
              }
            />
          </View>
          <BVLinearGradient
            colors={
              Array [
                1728053247,
                4294967295,
              ]
            }
            endPoint={
              Object {
                "x": 0,
                "y": 1,
              }
            }
            locations={
              Array [
                0,
                0.8,
              ]
            }
            overlayColor="white"
            overlayType="featured"
            startPoint={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <RCTScrollView
          onScroll={[Function]}
          scrollEventThrottle={16}
          stretchyHeight={1}
        >
          <View>
            <View
              style={
                Object {
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Text
                padded={true}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 43,
                    "lineHeight": 49.45,
                    "paddingVertical": 46.44,
                  }
                }
              >
                Well hello there!
              </Text>
              <Text
                padded={true}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                    "paddingBottom": 25.92,
                    "paddingTop": 38.88,
                  }
                }
              >
                Hello there!
                

              </Text>
              <Text
                padded={true}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 24,
                    "lineHeight": 27.6,
                    "paddingBottom": 17.28,
                    "paddingTop": 25.92,
                  }
                }
              >
                Hello there!
              </Text>
              <Text
                padded={true}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 43,
                    "lineHeight": 49.45,
                    "paddingVertical": 46.44,
                  }
                }
              >
                Try to scroll me around.
              </Text>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`the StretchyView component should render as a header 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "transform": Array [
              Object {
                "translateY": 0,
              },
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          animate={null}
          customAnimate={null}
          onReady={false}
          style={
            Object {
              "aspectRatio": 1,
              "backgroundColor": "#A5A5A5",
              "width": "100%",
            }
          }
        >
          <Image
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "https://picsum.photos/600/600",
                },
              ]
            }
            style={
              Object {
                "aspectRatio": 1,
                "backgroundColor": "#A5A5A5",
                "opacity": 0,
                "width": "100%",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <RCTScrollView
          onScroll={[Function]}
          scrollEventThrottle={16}
        >
          <View>
            <View
              style={
                Object {
                  "height": 1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                  }
                }
              >
                Text on top of the stretchy!
              </Text>
            </View>
            <View
              style={
                Object {
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Text
                padded={true}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 43,
                    "lineHeight": 49.45,
                    "paddingVertical": 46.44,
                  }
                }
              >
                Well hello there!
              </Text>
              <Text
                padded={true}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 36,
                    "lineHeight": 41.4,
                    "paddingBottom": 25.92,
                    "paddingTop": 38.88,
                  }
                }
              >
                Hello there!
                

              </Text>
              <Text
                padded={true}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 24,
                    "lineHeight": 27.6,
                    "paddingBottom": 17.28,
                    "paddingTop": 25.92,
                  }
                }
              >
                Hello there!
              </Text>
              <Text
                padded={true}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Black",
                    "fontSize": 43,
                    "lineHeight": 49.45,
                    "paddingVertical": 46.44,
                  }
                }
              >
                Try to scroll me around.
              </Text>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
